Hotfix static matrices

--- a/TrainTestSaver.ipynb
+++ b/TrainTestSaver.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -19,7 +21,7 @@
        "\twith 398636 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,132 +37,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n",
-      "Warning: 8392 (27.15 %) of 30911 users have no Train items\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from Algorithms.Data_manager.Split_functions.split_train_validation_leave_k_out import split_train_leave_k_out_user_wise\n",
+    "# from Algorithms.Data_manager.Split_functions.split_train_validation_leave_k_out import split_train_leave_k_out_user_wise\n",
     "\n",
     "\n",
-    "for i in range(100):\n",
-    "    train, test = split_train_leave_k_out_user_wise(urm, k_out=1)\n",
-    "    sps.save_npz('/Users/mattiarighetti/Desktop/recsys-2019/data/saved_matrices/train_' + str(i), train)\n",
-    "    sps.save_npz('/Users/mattiarighetti/Desktop/recsys-2019/data/saved_matrices/test_' + str(i), test)"
+    "# for i in range(100):\n",
+    "#     train, test = split_train_leave_k_out_user_wise(urm, k_out=1)\n",
+    "#     sps.save_npz('/Users/mattiarighetti/Desktop/recsys-2019/data/saved_matrices/train_' + str(i), train)\n",
+    "#     sps.save_npz('/Users/mattiarighetti/Desktop/recsys-2019/data/saved_matrices/test_' + str(i), test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train = get_data()['s_train']\n",
+    "test = get_data()['s_test']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<30911x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 346943 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<30911x18495 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 27255 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
   },
   {
    "cell_type": "code",
@@ -200,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
